--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "env-cmd -f  ./.env.development next dev",
+    "build:dev": "env-cmd -f  ./.env.development next build",
+    "start:dev": "env-cmd -f  ./.env.development next start",
+    "build:prod": "env-cmd -f  ./.env.production next build",
+    "start:prod": "env-cmd -f  ./.env.production next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "env-cmd": "^10.1.0",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
