--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.7.9",
+    "cookies-next": "^5.1.0",
     "env-cmd": "^10.1.0",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
@@ -19,7 +21,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-select": "^5.10.0"
+    "react-redux": "^9.2.0",
+    "react-select": "^5.10.0",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "postcss": "^8",
